--- a/PythonTest.ipynb
+++ b/PythonTest.ipynb
@@ -234,8 +234,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "lowerメソッドの確認をするため、大文字のアルファベットを入力してください：FSK\n",
-            "変換結果：fsk\n"
+            "lowerメソッドの確認をするため、大文字のアルファベットを入力してください：AAA\n",
+            "変換結果：aaa\n"
           ]
         }
       ]
